--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "./js/index.js",
   "homepage": "https://tonyoloo.github.io/webpackloan",
-
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
@@ -36,6 +35,21 @@
     "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "datatables.net-autofill-bs5": "^2.7.0",
+    "datatables.net-bs5": "^2.0.7",
+    "datatables.net-buttons-bs5": "^3.0.2",
+    "datatables.net-colreorder-bs5": "^2.0.2",
+    "datatables.net-fixedcolumns-bs5": "^5.0.0",
+    "datatables.net-fixedheader-bs5": "^4.0.1",
+    "datatables.net-keytable-bs5": "^2.12.0",
+    "datatables.net-responsive-bs5": "^3.0.2",
+    "datatables.net-rowgroup-bs5": "^1.5.0",
+    "datatables.net-rowreorder-bs5": "^1.5.0",
+    "datatables.net-scroller-bs5": "^2.4.2",
+    "datatables.net-searchbuilder-bs5": "^1.7.1",
+    "datatables.net-searchpanes-bs5": "^2.3.0",
+    "datatables.net-select-bs5": "^2.0.2",
+    "datatables.net-staterestore-bs5": "^1.4.1",
     "jquery": "^3.7.1",
     "sweetalert2": "^11.11.0"
   }
