--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
     "autoprefixer": "^10.4.19",
+    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.1.1",
@@ -51,6 +54,7 @@
     "datatables.net-select-bs5": "^2.0.2",
     "datatables.net-staterestore-bs5": "^1.4.1",
     "jquery": "^3.7.1",
+    "popper.js": "^1.16.1",
     "sweetalert2": "^11.11.0"
   }
 }
